--- a/deploy/kubernetes/charts/templates/cdnsystem-svc.yaml
+++ b/deploy/kubernetes/charts/templates/cdnsystem-svc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{template "dragonfly.fullname" . }}
+  name: {{template "dragonfly.cdnsystem.fullname" . }}
   labels:
     app: {{ template "dragonfly.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
