--- a/deploy/kubernetes/charts/templates/client-daemonset.yaml
+++ b/deploy/kubernetes/charts/templates/client-daemonset.yaml
@@ -14,6 +14,11 @@ metadata:
   {{- end }}
 spec:
   replicas: {{ .Values.client.replicas }}
+  selector:
+    matchLabels:
+      app: {{ template "dragonfly.name" . }}
+      component: "{{ .Values.client.name }}"
+      release: {{ .Release.Name }}
   template:
     metadata:
       labels:
