--- a/deploy/kubernetes/charts/templates/scheduler-deploy.yaml
+++ b/deploy/kubernetes/charts/templates/scheduler-deploy.yaml
@@ -1,57 +1,61 @@
-{{- range .Values.scheduler }}
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     app: {{ template "dragonfly.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    component: "{{ .name }}"
+    component: "{{ .Values.scheduler.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "dragonfly.scheduler.fullname" . }}
-  {{- if .deploymentAnnotations }}
+  {{- if .Values.scheduler.deploymentAnnotations }}
   annotations:
-{{ toYaml .deploymentAnnotations | indent 4 }}
+{{ toYaml .Values.scheduler.deploymentAnnotations | indent 4 }}
   {{- end }}
 spec:
-  replicas: {{ .replicas }}
+  replicas: {{ .Values.scheduler.replicas }}
+  selector:
+    matchLabels:
+      app: {{ template "dragonfly.name" . }}
+      component: "{{ .Values.scheduler.name }}"
+      release: {{ .Release.Name }}
   template:
     metadata:
       labels:
         app: {{ template "dragonfly.scheduler.fullname" . }}
-        component: "{{ .name }}"
+        component: "{{ .Values.scheduler.name }}"
         release: {{ .Release.Name }}
-        {{- if .podAnnotations }}
+        {{- if .Values.scheduler.podAnnotations }}
       annotations:
-{{ toYaml .podAnnotations | indent 8 }}
+{{ toYaml .Values.scheduler.podAnnotations | indent 8 }}
         {{- end }}
     spec:
-      {{- if .nodeSelector }}
+      {{- if .Values.scheduler.nodeSelector }}
       nodeSelector:
-{{ toYaml .nodeSelector | indent 8 }}
+{{ toYaml .Values.scheduler.nodeSelector | indent 8 }}
       {{- end }}
-      {{- if .tolerations }}
+      {{- if .Values.scheduler.tolerations }}
       tolerations:
-{{ toYaml .tolerations | indent 8 }}
+{{ toYaml .Values.scheduler.tolerations | indent 8 }}
       {{- end }}
-      {{- if .affinity }}
+      {{- if .Values.scheduler.affinity }}
       affinity:
-{{ toYaml .affinity | indent 8 }}
+{{ toYaml .Values.scheduler.affinity | indent 8 }}
       {{- end }}
-      {{- if quote .terminationGracePeriodSeconds }}
-      terminationGracePeriodSeconds: {{ .terminationGracePeriodSeconds }}
+      {{- if quote .Values.scheduler.terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ .Values.scheduler.terminationGracePeriodSeconds }}
       {{- end }}
-      {{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") (.priorityClassName) }}
-      priorityClassName: {{ .priorityClassName }}
+      {{- if and (.Capabilities.APIVersions.Has "scheduling.k8s.io/v1beta1") (.Values.scheduler.priorityClassName) }}
+      priorityClassName: {{ .Values.scheduler.priorityClassName }}
       {{- end }}
       containers:
       - name: scheduler
-        image: "{{ .image }}:{{ .tag }}"
-        imagePullPolicy: {{ .pullPolicy | quote }}
+        image: "{{ .Values.scheduler.image }}:{{ .Values.scheduler.tag }}"
+        imagePullPolicy: {{ .Values.scheduler.pullPolicy | quote }}
         resources:
-{{ toYaml .resources | indent 12 }}
+{{ toYaml .Values.scheduler.resources | indent 12 }}
         ports:
-        - containerPort: {{ .containerPort }}
+        - containerPort: {{ .Values.scheduler.containerPort }}
           protocol: TCP
         volumeMounts:
         - name: config
@@ -63,6 +67,3 @@ spec:
           items:
           - key: scheduler.yaml
             path: scheduler.yaml
-              
----
-{{- end }}
