--- a/deploy/kubernetes/charts/values.yaml
+++ b/deploy/kubernetes/charts/values.yaml
@@ -1,41 +1,65 @@
+nameOverride: ""
+fullnameOverride: ""
+
 scheduler:
-  - name: scheduler
-    replicas: 2
-    image: dragonflyoss/scheduler
-    tag: 0.1.0
-    pullPolicy: IfNotPresent
-    resources:
-      requests:
-        cpu: "512m"
-        memory: "512Mi"
-      limits:
-        cpu: "512m"
-        memory: "512Mi"
-    priorityClassName: ""
-    nodeSelector: {}
-    terminationGracePeriodSeconds:
-    tolerations: []
-    podAnnotations: {}
-    deploymentAnnotations: {}
-    containerPort: 8002
-    service:
-      type: ClusterIP
-      annotations: {}
-      port: 8002
-      targetPort: 8002
-    config:
-      debug: false
-      worker:
-        worker-num: 1
-        worker-job-pool-size: 10000
-        sender-num: 10
-        sender-job-pool-size: 10000
+  name: scheduler
+  replicas: 2
+  image: dragonflyoss/scheduler
+  tag: 0.1.0
+  pullPolicy: IfNotPresent
+  resources:
+    requests:
+      cpu: "512m"
+      memory: "512Mi"
+    limits:
+      cpu: "512m"
+      memory: "512Mi"
+  priorityClassName: ""
+  nodeSelector: {}
+  terminationGracePeriodSeconds:
+  tolerations: []
+  podAnnotations: {}
+  deploymentAnnotations: {}
+  containerPort: 8002
+  service:
+    type: ClusterIP
+    annotations: {}
+    port: 8002
+    targetPort: 8002
+  config:
+    debug: false
+    worker:
+      worker-num: 1
+      worker-job-pool-size: 10000
+      sender-num: 10
+      sender-job-pool-size: 10000
 
 cdnsystem:
-  - name: cdnsystem
-    replicas: 2
-    image: dragonflyoss/cdnsystem
-    tag: 0.1.0
+  name: cdnsystem
+  nameOverride: ""
+  fullnameOverride: ""
+  replicas: 2
+  image: dragonflyoss/cdnsystem
+  tag: 0.1.0
+  pullPolicy: IfNotPresent
+  resources:
+    requests:
+      cpu: "512m"
+      memory: "512Mi"
+    limits:
+      cpu: "512m"
+      memory: "512Mi"
+  priorityClassName: ""
+  nodeSelector: {}
+  terminationGracePeriodSeconds:
+  tolerations: []
+  podAnnotations: {}
+  deploymentAnnotations: {}
+  containerPort: 8003
+  nginx:
+    name: nginx
+    image: nginx
+    tag: stable
     pullPolicy: IfNotPresent
     resources:
       requests:
@@ -44,68 +68,51 @@ cdnsystem:
       limits:
         cpu: "512m"
         memory: "512Mi"
-    priorityClassName: ""
-    nodeSelector: {}
-    terminationGracePeriodSeconds:
-    tolerations: []
-    podAnnotations: {}
-    deploymentAnnotations: {}
-    containerPort: 8003
-    nginx:
-      name: nginx
-      image: nginx
-      tag: stable
-      pullPolicy: IfNotPresent
-      resources:
-        requests:
-          cpu: "512m"
-          memory: "512Mi"
-        limits:
-          cpu: "512m"
-          memory: "512Mi"
-      containerPort: 8001
-    service:
-      type: ClusterIP
-      annotations: {}
-      port: 8003
-      targetPort: 8003
-      nginxPort: 8001
-      nginxTargetPort: 8001
-    config:
-      base:
-        systemReservedBandwidth: 20M
-        maxBandwidth: 200M
-        enableProfiler: false
-        failAccessInterval: 3m
-        gcInitialDelay: 6s
-        gcMetaInterval: 2m
-        gcStorageInterval: 15s
-        taskExpireTime: 3m
-        storagePattern: disk
-        console: false
-      plugins:
-        storage:
-          - name: disk
-            enable: true
-            config:
-              baseDir: /tmp/cdn
-              gcConfig:
-                youngGCThreshold: 100G
-                fullGCThreshold: 5G
-                cleanRatio: 1
-                intervalThreshold: 2h
-          - name: memory
-            enable: true
-            config:
-              baseDir: /tmp/memory/dragonfly
-              gcConfig:
-                youngGCThreshold: 100G
-                fullGCThreshold: 5G
-                cleanRatio: 3
-                intervalThreshold: 3s
+    containerPort: 8001
+  service:
+    type: ClusterIP
+    annotations: {}
+    port: 8003
+    targetPort: 8003
+    nginxPort: 8001
+    nginxTargetPort: 8001
+  config:
+    base:
+      systemReservedBandwidth: 20M
+      maxBandwidth: 200M
+      enableProfiler: false
+      failAccessInterval: 3m
+      gcInitialDelay: 6s
+      gcMetaInterval: 2m
+      gcStorageInterval: 15s
+      taskExpireTime: 3m
+      storagePattern: disk
+      console: false
+    plugins:
+      storage:
+        - name: disk
+          enable: true
+          config:
+            baseDir: /tmp/cdn
+            gcConfig:
+              youngGCThreshold: 100G
+              fullGCThreshold: 5G
+              cleanRatio: 1
+              intervalThreshold: 2h
+        - name: memory
+          enable: true
+          config:
+            baseDir: /tmp/memory/dragonfly
+            gcConfig:
+              youngGCThreshold: 100G
+              fullGCThreshold: 5G
+              cleanRatio: 3
+              intervalThreshold: 3s
 
 client:
   name: client
+  nameOverride: ""
+  fullnameOverride: ""
   image: dragonflyoss/client
   tag: 0.1.0
   pullPolicy: IfNotPresent
