--- a/deploy/kubernetes/charts/dragonfly/templates/cdnsystem-svc.yaml
+++ b/deploy/kubernetes/charts/dragonfly/templates/cdnsystem-svc.yaml
@@ -1,47 +1,47 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{template "dragonfly.cdnsystem.fullname" . }}
+  name: {{template "dragonfly.cdn.fullname" . }}
   labels:
     app: {{ template "dragonfly.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    component: "{{ .Values.cdnsystem.name }}"
+    component: "{{ .Values.cdn.name }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-{{- if .Values.cdnsystem.serviceAnnotations }}
+{{- if .Values.cdn.serviceAnnotations }}
   annotations:
-{{ toYaml .Values.cdnsystem.serviceAnnotations | indent 4 }}
+{{ toYaml .Values.cdn.serviceAnnotations | indent 4 }}
 {{- end }}
 spec:
   ports:
-    - port: {{.Values.cdnsystem.service.port}}
+    - port: {{.Values.cdn.service.port}}
       name: http
-      targetPort: {{ .Values.cdnsystem.service.targetPort }}
-      {{- if (and (eq .Values.cdnsystem.service.type "NodePort") (not (empty .Values.cdnsystem.service.nodePort))) }}
-      nodePort: {{.Values.cdnsystem.service.nodePort}}
+      targetPort: {{ .Values.cdn.service.targetPort }}
+      {{- if (and (eq .Values.cdn.service.type "NodePort") (not (empty .Values.cdn.service.nodePort))) }}
+      nodePort: {{.Values.cdn.service.nodePort}}
       {{- end }}
-    - port: {{.Values.cdnsystem.service.nginxPort}}
+    - port: {{.Values.cdn.service.nginxPort}}
       name: http-nginx
-      targetPort: {{ .Values.cdnsystem.service.nginxTargetPort }}
-      {{- if (and (eq .Values.cdnsystem.service.type "NodePort") (not (empty .Values.cdnsystem.service.nginxNodePort))) }}
-      nodePort: {{.Values.cdnsystem.service.nginxNodePort}}
+      targetPort: {{ .Values.cdn.service.nginxTargetPort }}
+      {{- if (and (eq .Values.cdn.service.type "NodePort") (not (empty .Values.cdn.service.nginxNodePort))) }}
+      nodePort: {{.Values.cdn.service.nginxNodePort}}
       {{- end }}
-{{- range $index, $port := .Values.cdnsystem.service.extraPorts }}
+{{- range $index, $port := .Values.cdn.service.extraPorts }}
     - port: {{ $port.port }}
       name: {{ $port.name }}
       targetPort: {{ $port.port }}
 {{- end }}
   selector:
     app: {{ template "dragonfly.name" . }}
-    component: "{{ .Values.cdnsystem.name }}"
+    component: "{{ .Values.cdn.name }}"
     release: {{ .Release.Name }}
-  type: {{.Values.cdnsystem.service.type}}
-  {{if eq .Values.cdnsystem.service.type "LoadBalancer"}}
-{{- if .Values.cdnsystem.service.loadBalancerSourceRanges }}
+  type: {{.Values.cdn.service.type}}
+  {{if eq .Values.cdn.service.type "LoadBalancer"}}
+{{- if .Values.cdn.service.loadBalancerSourceRanges }}
   loadBalancerSourceRanges:
-{{ toYaml .Values.cdnsystem.service.loadBalancerSourceRanges | indent 4 }}
+{{ toYaml .Values.cdn.service.loadBalancerSourceRanges | indent 4 }}
 {{- end }}
-  {{if .Values.cdnsystem.service.loadBalancerIP}}
-  loadBalancerIP: {{.Values.cdnsystem.serivice.loadBalancerIP}}
+  {{if .Values.cdn.service.loadBalancerIP}}
+  loadBalancerIP: {{.Values.cdn.serivice.loadBalancerIP}}
   {{end}}
   {{end}}
