feat: rename client to dfdaemon
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/deploy/kubernetes/charts/dragonfly/values.yaml
+++ b/deploy/kubernetes/charts/dragonfly/values.yaml
@@ -109,11 +109,11 @@ cdn:
               cleanRatio: 3
               intervalThreshold: 3s
 
-client:
-  name: client
+dfdaemon:
+  name: dfdaemon
   nameOverride: ""
   fullnameOverride: ""
-  image: dragonflyoss/client
+  image: dragonflyoss/dfdaemon
   tag: 0.1.0
   pullPolicy: IfNotPresent
   resources:
