dfget: change linux default work direcotry
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/client/config/testdata/config/daemon.yml
+++ b/client/config/testdata/config/daemon.yml
@@ -21,7 +21,8 @@ host:
   net_topology: d7y
 
 download:
-  rate_limit: 200Mi
+  total_rate_limit: 200Mi
+  per_peer_rate_limit: 20Mi
   download_grpc:
     security:
       insecure: true
