--- a/Dockerfile.dfdaemon
+++ b/Dockerfile.dfdaemon
@@ -22,4 +22,4 @@ COPY --from=builder /opt/dragonfly/bin/dfget /opt/dragonfly/bin/dfget
 
 EXPOSE 65001
 
-ENTRYPOINT ["/opt/dragonfly/bin/dfget", "daemon", "--config", "/etc/dragonfly/dfdaemon.yaml"]
+ENTRYPOINT ["/opt/dragonfly/bin/dfget", "daemon", "--config", "/etc/dragonfly/dfget-daemon.yaml"]
