--- a/deploy/kubernetes/charts/dragonfly/templates/scheduler-svc.yaml
+++ b/deploy/kubernetes/charts/dragonfly/templates/scheduler-svc.yaml
@@ -26,7 +26,7 @@ spec:
       targetPort: {{ $port.port }}
 {{- end }}
   selector:
-    app: {{ template "dragonfly.name" . }}
+    app: {{ template "dragonfly.scheduler.fullname" . }}
     component: "{{ .Values.scheduler.name }}"
     release: {{ .Release.Name }}
   type: {{.Values.scheduler.service.type}}
