feat: app labels
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/deploy/kubernetes/charts/dragonfly/templates/cdn-deploy.yaml
+++ b/deploy/kubernetes/charts/dragonfly/templates/cdn-deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: {{ template "dragonfly.name" . }}
+    app: {{ template "dragonfly.cdn.fullname" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     component: "{{ .Values.cdn.name }}"
     heritage: {{ .Release.Service }}
