feat: service addr
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/deploy/kubernetes/charts/dragonfly/templates/scheduler-configmap.yaml
+++ b/deploy/kubernetes/charts/dragonfly/templates/scheduler-configmap.yaml
@@ -14,8 +14,10 @@ data:
       port: {{ .Values.scheduler.containerPort }}
     worker:
 {{ toYaml .Values.scheduler.config.worker | indent 6 }}
+    scheduler:
     cdn:
-      cdn-name: {{template "dragonfly.cdn.fullname" . }}
-      ip: {{template "dragonfly.cdn.fullname" . }}
-      rpc-port: {{ .Values.cdn.service.port }}
-      download-port: {{ .Values.cdn.service.nginxPort }}
+      list:
+        - - cdn-name: {{template "dragonfly.cdn.fullname" . }}
+            ip: {{template "dragonfly.cdn.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local
+            rpc-port: {{ .Values.cdn.service.port }}
+            download-port: {{ .Values.cdn.service.nginxPort }}
