--- a/deploy/kubernetes/charts/dragonfly/templates/dfdaemon-configmap.yaml
+++ b/deploy/kubernetes/charts/dragonfly/templates/dfdaemon-configmap.yaml
@@ -20,7 +20,7 @@ data:
     scheduler:
       net_addrs:
         - type: tcp
-          addr: {{template "dragonfly.scheduler.fullname" . }}:{{ .Values.scheduler.service.port }}
+          addr: {{template "dragonfly.scheduler.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.scheduler.service.port }}
       schedule_timeout: 5m
     host:
 {{ toYaml .Values.dfdaemon.config.host | indent 6 }}
